Update pom.xnl
- Switch to java 11, jetty
- Update libs
- Clear unpropper dependencies